--- a/_data/next.yml
+++ b/_data/next.yml
@@ -7,27 +7,27 @@
   vimrcs:
   - url: https://github.com/guns/haus/blob/master/etc/vimrc
     name: vimrc
-    hash: 
+    hash: e8ea5858ef8d89ae7281a83bff78db84171dd050
   - url: https://github.com/guns/haus/blob/master/etc/vim/local/autocommands.vim
     name: autocommands.vim
-    hash: 
+    hash: e8ea5858ef8d89ae7281a83bff78db84171dd050
   - url: https://github.com/guns/haus/blob/master/etc/vim/local/commands.vim
     name: commands.vim
-    hash: 
+    hash: e8ea5858ef8d89ae7281a83bff78db84171dd050
   - url: https://github.com/guns/haus/blob/master/etc/vim/local/gvimrc.vim
     name: gvimrc.vim
-    hash: 
+    hash: e8ea5858ef8d89ae7281a83bff78db84171dd050
   - url: https://github.com/guns/haus/blob/master/etc/vim/local/mappings.vim
     name: mappings.vim
-    hash: 
+    hash: e8ea5858ef8d89ae7281a83bff78db84171dd050
   - url: https://github.com/guns/haus/blob/master/etc/vim/local/modifiers.vim
     name: modifiers.vim
-    hash: 
+    hash: e8ea5858ef8d89ae7281a83bff78db84171dd050
   - url: https://github.com/guns/haus/blob/master/etc/vim/local/syntax.vim
     name: syntax.vim
-    hash: 
+    hash: e8ea5858ef8d89ae7281a83bff78db84171dd050
   - url: https://github.com/guns/haus/blob/master/etc/vim/local/tty.vim
     name: tty.vim
-    hash: 
+    hash: e8ea5858ef8d89ae7281a83bff78db84171dd050
   part: 
   other: 
