--- a/_data/next.yml
+++ b/_data/next.yml
@@ -1,33 +1,12 @@
 ---
-- id: 206
-  date: 2016-06-11 23:00
+- id: 207
+  date: 2016-06-18 23:00
   author:
-    name: guns
-    url: https://github.com/guns
+    name: gilbertwyw
+    url: https://github.com/gilbertwyw
   vimrcs:
-  - url: https://github.com/guns/haus/blob/master/etc/vimrc
+  - url: https://github.com/gilbertwyw/dotfiles/blob/master/vim/vimrc
     name: vimrc
-    hash: e8ea5858ef8d89ae7281a83bff78db84171dd050
-  - url: https://github.com/guns/haus/blob/master/etc/vim/local/autocommands.vim
-    name: autocommands.vim
-    hash: e8ea5858ef8d89ae7281a83bff78db84171dd050
-  - url: https://github.com/guns/haus/blob/master/etc/vim/local/commands.vim
-    name: commands.vim
-    hash: e8ea5858ef8d89ae7281a83bff78db84171dd050
-  - url: https://github.com/guns/haus/blob/master/etc/vim/local/gvimrc.vim
-    name: gvimrc.vim
-    hash: e8ea5858ef8d89ae7281a83bff78db84171dd050
-  - url: https://github.com/guns/haus/blob/master/etc/vim/local/mappings.vim
-    name: mappings.vim
-    hash: e8ea5858ef8d89ae7281a83bff78db84171dd050
-  - url: https://github.com/guns/haus/blob/master/etc/vim/local/modifiers.vim
-    name: modifiers.vim
-    hash: e8ea5858ef8d89ae7281a83bff78db84171dd050
-  - url: https://github.com/guns/haus/blob/master/etc/vim/local/syntax.vim
-    name: syntax.vim
-    hash: e8ea5858ef8d89ae7281a83bff78db84171dd050
-  - url: https://github.com/guns/haus/blob/master/etc/vim/local/tty.vim
-    name: tty.vim
-    hash: e8ea5858ef8d89ae7281a83bff78db84171dd050
-  part: "後編"
+    hash: 
+  part: 
   other: 
