--- a/_data/next.yml
+++ b/_data/next.yml
@@ -1,12 +1,12 @@
 ---
-- id: 210
-  date: 2016-07-09 23:00
+- id: 211
+  date: 2016-07-16 23:00
   author:
-    name: ryym
-    url: https://github.com/ryym
+    name: AtsushiSakai
+    url: https://github.com/AtsushiSakai
   vimrcs:
-  - url: https://github.com/ryym/dotfiles/blob/master/dotfiles/vim/vimrc
-    name: vimrc
+  - url: https://github.com/AtsushiSakai/myvim/blob/master/.vimrc
+    name: .vimrc
     hash: 
   part: 
   other: 
