--- a/_data/next.yml
+++ b/_data/next.yml
@@ -1,12 +1,12 @@
 ---
-- id: 217
-  date: 2016-08-27 23:00
+- id: 218
+  date: 2016-09-03 23:00
   author:
-    name: bingdian
-    url: https://github.com/bingdian
+    name: Slava
+    url: https://github.com/Slava
   vimrcs:
-  - url: https://github.com/bingdian/vimrc/blob/master/_vimrc
-    name: _vimrc
+  - url: https://github.com/Slava/vimrc/blob/master/.vimrc
+    name: .vimrc
     hash: 
   part: 
   other: 
