--- a/_data/next.yml
+++ b/_data/next.yml
@@ -1,12 +1,12 @@
 ---
-- id: 221
-  date: 2016-09-24 23:00
+- id: 222
+  date: 2016-10-01 23:00
   author:
-    name: tlhunter
-    url: https://github.com/tlhunter
+    name: ruchee
+    url: https://github.com/ruchee
   vimrcs:
-  - url: https://github.com/tlhunter/vimrc/blob/master/vimrc
-    name: vimrc
+  - url: https://github.com/ruchee/vimrc/blob/master/_vimrc
+    name: _vimrc
     hash: 
   part: 
   other: 
