第227回分追加

--- a/_data/next.yml
+++ b/_data/next.yml
@@ -1,51 +1,225 @@
 ---
-- id: 227
-  date: 2016-11-05 23:00
+- id: 228
+  date: 2016-11-12 23:00
   author:
-    name: b4b4r07
-    url: https://github.com/b4b4r07
+    name: MaxMEllon
+    url: https://github.com/MaxMEllon
   vimrcs:
-  - url: https://github.com/b4b4r07/dotfiles/blob/master/.vim/vimrc
-    name: vimrc
-    hash: 1498c703fc8668474dd0c9db97e7da0aec1659f7
-  - url: https://github.com/b4b4r07/dotfiles/blob/master/.vim/scripts/init.vim
-    name: init.vim
-    hash: 1498c703fc8668474dd0c9db97e7da0aec1659f7
-  - url: https://github.com/b4b4r07/dotfiles/blob/master/.vim/scripts/env.vim
-    name: env.vim
-    hash: 1498c703fc8668474dd0c9db97e7da0aec1659f7
-  - url: https://github.com/b4b4r07/dotfiles/blob/master/.vim/scripts/plug.vim
-    name: plug.vim
-    hash: 1498c703fc8668474dd0c9db97e7da0aec1659f7
-  - url: https://github.com/b4b4r07/dotfiles/blob/master/.vim/scripts/custom.vim
-    name: custom.vim
-    hash: 1498c703fc8668474dd0c9db97e7da0aec1659f7
-  - url: https://github.com/b4b4r07/dotfiles/blob/master/.vim/scripts/dein.vim
-    name: dein.vim
-    hash: 1498c703fc8668474dd0c9db97e7da0aec1659f7
-  - url: https://github.com/b4b4r07/dotfiles/blob/master/.vim/scripts/base.vim
-    name: base.vim
-    hash: 1498c703fc8668474dd0c9db97e7da0aec1659f7
-  - url: https://github.com/b4b4r07/dotfiles/blob/master/.vim/scripts/func.vim
-    name: func.vim
-    hash: 1498c703fc8668474dd0c9db97e7da0aec1659f7
-  - url: https://github.com/b4b4r07/dotfiles/blob/master/.vim/scripts/view.vim
-    name: view.vim
-    hash: 1498c703fc8668474dd0c9db97e7da0aec1659f7
-  - url: https://github.com/b4b4r07/dotfiles/blob/master/.vim/scripts/map.vim
-    name: map.vim
-    hash: 1498c703fc8668474dd0c9db97e7da0aec1659f7
-  - url: https://github.com/b4b4r07/dotfiles/blob/master/.vim/scripts/command.vim
+  - url: https://github.com/MaxMEllon/.vim/blob/master/.vimrc
+    name: .vimrc
+    hash: 
+  - url: https://github.com/MaxMEllon/.vim/blob/master/autoload/maxmellon.vim
+    name: maxmellon.vim
+    hash: 
+  - url: https://github.com/MaxMEllon/.vim/blob/master/autoload/maxmellon/cdgitroot.vim
+    name: cdgitroot.vim
+    hash: 
+  - url: https://github.com/MaxMEllon/.vim/blob/master/autoload/maxmellon/dirvish.vim
+    name: dirvish.vim
+    hash: 
+  - url: https://github.com/MaxMEllon/.vim/blob/master/autoload/maxmellon/fzf.vim
+    name: fzf.vim
+    hash: 
+  - url: https://github.com/MaxMEllon/.vim/blob/master/autoload/maxmellon/fzy.vim
+    name: fzy.vim
+    hash: 
+  - url: https://github.com/MaxMEllon/.vim/blob/master/autoload/maxmellon/hier.vim
+    name: hier.vim
+    hash: 
+  - url: https://github.com/MaxMEllon/.vim/blob/master/autoload/maxmellon/toggle.vim
+    name: toggle.vim
+    hash: 
+  - url: https://github.com/MaxMEllon/.vim/blob/master/ftplugin/cpp.vim
+    name: cpp.vim
+    hash: 
+  - url: https://github.com/MaxMEllon/.vim/blob/master/ftplugin/dirvish.vim
+    name: dirvish.vim
+    hash: 
+  - url: https://github.com/MaxMEllon/.vim/blob/master/ftplugin/go.vim
+    name: go.vim
+    hash: 
+  - url: https://github.com/MaxMEllon/.vim/blob/master/ftplugin/javascript.vim
+    name: javascript.vim
+    hash: 
+  - url: https://github.com/MaxMEllon/.vim/blob/master/ftplugin/qf.vim
+    name: qf.vim
+    hash: 
+  - url: https://github.com/MaxMEllon/.vim/blob/master/ftplugin/ruby.vim
+    name: ruby.vim
+    hash: 
+  - url: https://github.com/MaxMEllon/.vim/blob/master/plugin/common-settings.vim
+    name: common-settings.vim
+    hash: 
+  - url: https://github.com/MaxMEllon/.vim/blob/master/rc/abbrev.vim
+    name: abbrev.vim
+    hash: 
+  - url: https://github.com/MaxMEllon/.vim/blob/master/rc/command.vim
     name: command.vim
-    hash: 1498c703fc8668474dd0c9db97e7da0aec1659f7
-  - url: https://github.com/b4b4r07/dotfiles/blob/master/.vim/scripts/utils.vim
-    name: utils.vim
-    hash: 1498c703fc8668474dd0c9db97e7da0aec1659f7
-  - url: https://github.com/b4b4r07/dotfiles/blob/master/.vim/scripts/options.vim
-    name: options.vim
-    hash: 1498c703fc8668474dd0c9db97e7da0aec1659f7
-  - url: https://github.com/b4b4r07/dotfiles/blob/master/.vim/scripts/gui.vim
+    hash: 
+  - url: https://github.com/MaxMEllon/.vim/blob/master/rc/cui.vim
+    name: cui.vim
+    hash: 
+  - url: https://github.com/MaxMEllon/.vim/blob/master/rc/encode.vim
+    name: encode.vim
+    hash: 
+  - url: https://github.com/MaxMEllon/.vim/blob/master/rc/env.vim
+    name: env.vim
+    hash: 
+  - url: https://github.com/MaxMEllon/.vim/blob/master/rc/event.vim
+    name: event.vim
+    hash: 
+  - url: https://github.com/MaxMEllon/.vim/blob/master/rc/filetype.vim
+    name: filetype.vim
+    hash: 
+  - url: https://github.com/MaxMEllon/.vim/blob/master/rc/gui.vim
     name: gui.vim
-    hash: 1498c703fc8668474dd0c9db97e7da0aec1659f7
-  part: "後編"
+    hash: 
+  - url: https://github.com/MaxMEllon/.vim/blob/master/rc/indent.vim
+    name: indent.vim
+    hash: 
+  - url: https://github.com/MaxMEllon/.vim/blob/master/rc/mapping.vim
+    name: mapping.vim
+    hash: 
+  - url: https://github.com/MaxMEllon/.vim/blob/master/rc/menu.vim
+    name: menu.vim
+    hash: 
+  - url: https://github.com/MaxMEllon/.vim/blob/master/rc/neo.vim
+    name: neo.vim
+    hash: 
+  - url: https://github.com/MaxMEllon/.vim/blob/master/rc/opt.vim
+    name: opt.vim
+    hash: 
+  - url: https://github.com/MaxMEllon/.vim/blob/master/rc/plug.vim
+    name: plug.vim
+    hash: 
+  - url: https://github.com/MaxMEllon/.vim/blob/master/rc/statusline.vim
+    name: statusline.vim
+    hash: 
+  - url: https://github.com/MaxMEllon/.vim/blob/master/rc/ifplug/css.vim
+    name: css.vim
+    hash: 
+  - url: https://github.com/MaxMEllon/.vim/blob/master/rc/ifplug/cui.vim
+    name: cui.vim
+    hash: 
+  - url: https://github.com/MaxMEllon/.vim/blob/master/rc/ifplug/gui.vim
+    name: gui.vim
+    hash: 
+  - url: https://github.com/MaxMEllon/.vim/blob/master/rc/ifplug/javascript.vim
+    name: javascript.vim
+    hash: 
+  - url: https://github.com/MaxMEllon/.vim/blob/master/rc/ifplug/neo.vim
+    name: neo.vim
+    hash: 
+  - url: https://github.com/MaxMEllon/.vim/blob/master/rc/ifplug/win.vim
+    name: win.vim
+    hash: 
+  - url: https://github.com/MaxMEllon/.vim/blob/master/rc/plugrc/YouCompleteMe.vim
+    name: YouCompleteMe.vim
+    hash: 
+  - url: https://github.com/MaxMEllon/.vim/blob/master/rc/plugrc/caw.vim
+    name: caw.vim
+    hash: 
+  - url: https://github.com/MaxMEllon/.vim/blob/master/rc/plugrc/completor.vim
+    name: completor.vim
+    hash: 
+  - url: https://github.com/MaxMEllon/.vim/blob/master/rc/plugrc/deoplete-clang.vim
+    name: deoplete-clang.vim
+    hash: 
+  - url: https://github.com/MaxMEllon/.vim/blob/master/rc/plugrc/emmet-vim.vim
+    name: emmet-vim.vim
+    hash: 
+  - url: https://github.com/MaxMEllon/.vim/blob/master/rc/plugrc/foldCC.vim
+    name: foldCC.vim
+    hash: 
+  - url: https://github.com/MaxMEllon/.vim/blob/master/rc/plugrc/fzf.vim
+    name: fzf.vim
+    hash: 
+  - url: https://github.com/MaxMEllon/.vim/blob/master/rc/plugrc/incsearch.vim
+    name: incsearch.vim
+    hash: 
+  - url: https://github.com/MaxMEllon/.vim/blob/master/rc/plugrc/indentLine.vim
+    name: indentLine.vim
+    hash: 
+  - url: https://github.com/MaxMEllon/.vim/blob/master/rc/plugrc/lexima.vim
+    name: lexima.vim
+    hash: 
+  - url: https://github.com/MaxMEllon/.vim/blob/master/rc/plugrc/lightline.vim
+    name: lightline.vim
+    hash: 
+  - url: https://github.com/MaxMEllon/.vim/blob/master/rc/plugrc/neomake.vim
+    name: neomake.vim
+    hash: 
+  - url: https://github.com/MaxMEllon/.vim/blob/master/rc/plugrc/splitjoin.vim
+    name: splitjoin.vim
+    hash: 
+  - url: https://github.com/MaxMEllon/.vim/blob/master/rc/plugrc/surround.vim
+    name: surround.vim
+    hash: 
+  - url: https://github.com/MaxMEllon/.vim/blob/master/rc/plugrc/switch.vim
+    name: switch.vim
+    hash: 
+  - url: https://github.com/MaxMEllon/.vim/blob/master/rc/plugrc/undotree.vim
+    name: undotree.vim
+    hash: 
+  - url: https://github.com/MaxMEllon/.vim/blob/master/rc/plugrc/unite-rails-fat.vim
+    name: unite-rails-fat.vim
+    hash: 
+  - url: https://github.com/MaxMEllon/.vim/blob/master/rc/plugrc/unite-rails.vim
+    name: unite-rails.vim
+    hash: 
+  - url: https://github.com/MaxMEllon/.vim/blob/master/rc/plugrc/unite.vim
+    name: unite.vim
+    hash: 
+  - url: https://github.com/MaxMEllon/.vim/blob/master/rc/plugrc/vim-anzu.vim
+    name: vim-anzu.vim
+    hash: 
+  - url: https://github.com/MaxMEllon/.vim/blob/master/rc/plugrc/vim-dirvish.vim
+    name: vim-dirvish.vim
+    hash: 
+  - url: https://github.com/MaxMEllon/.vim/blob/master/rc/plugrc/vim-easy-align.vim
+    name: vim-easy-align.vim
+    hash: 
+  - url: https://github.com/MaxMEllon/.vim/blob/master/rc/plugrc/vim-easymotion.vim
+    name: vim-easymotion.vim
+    hash: 
+  - url: https://github.com/MaxMEllon/.vim/blob/master/rc/plugrc/vim-hier.vim
+    name: vim-hier.vim
+    hash: 
+  - url: https://github.com/MaxMEllon/.vim/blob/master/rc/plugrc/vim-jsx-pretty.vim
+    name: vim-jsx-pretty.vim
+    hash: 
+  - url: https://github.com/MaxMEllon/.vim/blob/master/rc/plugrc/vim-jsx-utils.vim
+    name: vim-jsx-utils.vim
+    hash: 
+  - url: https://github.com/MaxMEllon/.vim/blob/master/rc/plugrc/vim-niceblock.vim
+    name: vim-niceblock.vim
+    hash: 
+  - url: https://github.com/MaxMEllon/.vim/blob/master/rc/plugrc/vim-operator-flashy.vim
+    name: vim-operator-flashy.vim
+    hash: 
+  - url: https://github.com/MaxMEllon/.vim/blob/master/rc/plugrc/vim-over.vim
+    name: vim-over.vim
+    hash: 
+  - url: https://github.com/MaxMEllon/.vim/blob/master/rc/plugrc/vim-quickrun.vim
+    name: vim-quickrun.vim
+    hash: 
+  - url: https://github.com/MaxMEllon/.vim/blob/master/rc/plugrc/vim-signature.vim
+    name: vim-signature.vim
+    hash: 
+  - url: https://github.com/MaxMEllon/.vim/blob/master/rc/plugrc/vim-signify.vim
+    name: vim-signify.vim
+    hash: 
+  - url: https://github.com/MaxMEllon/.vim/blob/master/rc/plugrc/vim-singleton.vim
+    name: vim-singleton.vim
+    hash: 
+  - url: https://github.com/MaxMEllon/.vim/blob/master/rc/plugrc/vim-startify.vim
+    name: vim-startify.vim
+    hash: 
+  - url: https://github.com/MaxMEllon/.vim/blob/master/rc/plugrc/vim-watchdogs.vim
+    name: vim-watchdogs.vim
+    hash: 
+  - url: https://github.com/MaxMEllon/.vim/blob/master/rc/plugrc/yankround.vim
+    name: yankround.vim
+    hash: 
+  part: "前編"
   other: 
